--- a/network-core/build.gradle
+++ b/network-core/build.gradle
@@ -39,9 +39,10 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'com.squareup.okhttp3:okhttp:4.9.0'
-    api 'com.google.code.gson:gson:2.8.6'
-    api "com.squareup.picasso:picasso:2.8"
-    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'com.google.code.gson:gson:2.8.6'
+    implementation "com.squareup.picasso:picasso:2.8"
+    implementation "androidx.appcompat:appcompat:1.2.0"
+    implementation 'com.datatheorem.android.trustkit:trustkit:1.1.3'
 
     implementation(project(":core"))
 
