--- a/network-library/build.gradle
+++ b/network-library/build.gradle
@@ -30,7 +30,8 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation(project(":network-core"))
     implementation 'androidx.appcompat:appcompat:1.2.0'
-    testImplementation 'junit:junit:4.12'
+    implementation 'com.google.code.gson:gson:2.8.6'
+    testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
