--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,22 +44,22 @@ android {
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.3.2'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.1'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.3.1'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    api "com.squareup.picasso:picasso:2.8"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:${kotlinVersion}"
+    implementation "androidx.core:core-ktx:${coreKtxVersion}"
+    implementation "androidx.appcompat:appcompat:${appCompatVersion}"
+    implementation "androidx.constraintlayout:constraintlayout:${constraintLayoutVersion}"
+    implementation "androidx.navigation:navigation-fragment-ktx:${navigationFragmentKtxVersion}"
+    implementation "androidx.navigation:navigation-ui-ktx:${navigationUiKtxVersion}"
+    implementation "androidx.legacy:legacy-support-v4:${legacySupportV4Version}"
+    implementation "com.squareup.picasso:picasso:${picassoVersion}"
     implementation(project(":network-library"))
     implementation(project(":network-core"))
 
     // material design
-    implementation 'com.google.android.material:material:1.3.0-alpha03'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    implementation "com.google.android.material:material:${materialDesignVersion}"
+    testImplementation "junit:junit:${junitVersion}"
+    androidTestImplementation "androidx.test.ext:junit:${junitExtVersion}"
+    androidTestImplementation "androidx.test.espresso:espresso-core:${picassoVersion}"
 
 }
 
