--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,31 @@ allprojects {
     }
 }
 
+ext {
+
+    // Android framework library
+    appCompatVersion = "1.2.0"
+    googleGsonVersion = "2.8.6"
+    trustKitVersion = "1.1.3"
+    coreKtxVersion = "1.3.2"
+    constraintLayoutVersion = "2.0.4"
+    navigationFragmentKtxVersion = "2.3.2"
+    navigationUiKtxVersion = "2.3.2"
+    legacySupportV4Version = "1.0.0"
+    materialDesignVersion = "1.3.0-beta01"
+
+    kotlinVersion = "1.4.20"
+
+    // Third party library
+    picassoVersion = "2.8"
+    okHttp4Version = "4.9.0"
+
+    // Test library
+    junitVersion = "4.13"
+    junitExtVersion = "1.1.2"
+    espressoCoreVersion = "3.3.0"
+}
+
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
