--- a/network-core/build.gradle
+++ b/network-core/build.gradle
@@ -36,18 +36,18 @@ android {
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.3.2'
-    implementation 'com.squareup.okhttp3:okhttp:4.9.0'
-    implementation 'com.google.code.gson:gson:2.8.6'
-    implementation "com.squareup.picasso:picasso:2.8"
-    implementation "androidx.appcompat:appcompat:1.2.0"
-    implementation 'com.datatheorem.android.trustkit:trustkit:1.1.3'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:${kotlinVersion}"
+    implementation "androidx.core:core-ktx:${coreKtxVersion}"
+    implementation "com.squareup.okhttp3:okhttp:${okHttp4Version}"
+    implementation "com.google.code.gson:gson:${googleGsonVersion}"
+    implementation "com.squareup.picasso:picasso:${picassoVersion}"
+    implementation "androidx.appcompat:appcompat:${appCompatVersion}"
+    implementation "com.datatheorem.android.trustkit:trustkit:${trustKitVersion}"
 
     implementation(project(":core"))
 
-    testImplementation 'junit:junit:4.13'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    testImplementation "junit:junit:${junitVersion}"
+    androidTestImplementation "androidx.test.ext:junit:${junitExtVersion}"
+    androidTestImplementation "androidx.test.espresso:espresso-core:${espressoCoreVersion}"
 
 }
